syntax = "proto3";

service PriceFeed {
  rpc GetPrice(PriceQuery) returns (PriceResponse) {}
  rpc ListCurrencies(ListCurrenciesQuery) returns (ListCurrenciesResponse) {}
}

message PriceResponse {
  float price = 1;
}

message PriceQuery {
  string currency = 1;
}

message ListCurrenciesQuery { }

message ListCurrenciesResponse {
  repeated Currency currencies = 1;
}

message Currency {
  string code = 1;
  string symbol = 2;
  string name = 3;
  string flag = 4;
  int32 fractionDigits = 5;
}
